add: webpack 相关配置

--- a/打包器/webpack/进阶篇.md
+++ b/打包器/webpack/进阶篇.md
@@ -45,8 +45,8 @@
     },
   ```
 
-# tree shaking - （`prod模式`下自动打开）
-- 概念：一个模块可能会有多个方法，主要某个被用到了，整个模块都会被打到「bundle」里去。`tree shaking`就是将用到的方法打入bundle，没用到的在「uglify」阶段檫除掉。
+# tree shaking - （`prod模式`下自动打开） ESM
+- 概念：一个模块可能会有多个方法，主要某个被用到了，整个模块都会被打到「bundle」里去。`tree shaking`就是将用到的方法打入bundle，没用到的在`uglify`阶段檫除掉。
 - 要求：必须是ES6语法。CJS方法（模块导入）不支持。
 - 擦除只擦除函数和变量，不擦除「类」。
 
@@ -65,27 +65,38 @@
   - 转化为一颗更小的AST。
   - 在输出代码。
 
-# scope Hoisting -（`prod模式`下自动打开）
+# scope Hoisting -（`prod模式`下自动打开）ESM
 - webpack模块机制
-  - webpack打包模块时，会将模块带上一层包裹。
-  - import会被转化成_webpack_require，返回module.exports。
+  - 打包时，模块依赖时会`进行函数包裹`
+  - `import会被转化成_webpack_require`，返回module.exports。
   - 最后打包出来是一个匿名函数，通过「__webpack_require__(0)」启动。
   ![](/image/ada29fefcc7e39a5f7a33bfa88cfcfc.png)
 
 - 存在问题： - 减少作用域
-  - 模块打包时，模块依赖时会`进行函数包裹`，如果依赖深的话会导致函数包裹明显
-  - 函数闭包对依赖进行包裹，运行代码时创建`函数作用域`变多，内存开销越大。
+  - 函数包裹明显，导致打包`体积增大`。
+  - 函数闭包对依赖进行包裹，运行代码时创建`函数作用域`变多，`内存开销越大`。
 
-- 原理：将所有模块的代码`按照引用顺序放在一个函数作用域`里，并会适当重命名一些变量解决冲突。
+- 原理：将所有模块的代码`按照引用顺序放在一个函数作用域`里，并通过`重命名`一些变量解决冲突。
   - 会把需要导入的文件放到导入者的顶部，例如：如果b依赖a，将a放在b的前面。
   - 可以减少「函数声明」和「内存开销」。
-  - 必须是es6语法，CJS语法无效。
 
-# 代码分割 - chunks
+# 代码分割 - chunks - 按需加载，懒加载
+- 会分割出多一个JS文件，并通过逻辑控制加载时间再去请求JS。
 - 适用的场景：
   - 抽离相同的代码到一个共享块。
   - 脚本懒加载，初始下载代码更小。
-- 之后通过ES6动态import「@babel/plugin-syntax-dynamic-import」，导入对应的模块。
+  ```JS
+  // cjs
+  require.ensure
+
+  // es6
+  import('jquery')
+    .then((jquery) => {
+      console.log(jquery)
+    })
+  ```
+
+# Eslint-Webpack-Plugin webpack配合eslint
 
 # [eslint](./project/eslint.md)
 
@@ -109,14 +120,14 @@ module.exports = require('XXX')
 ```
 
 # webpack 打包SSR
-- 对JS等文件不必使用hash的命名进行缓存。通常一个HTML返回所有的数据，所以减少了请求数量，白屏时间会更快。有利于SEO。
-- 主要实现是将模板最后渲染为一个「字符串」，最后访问路由时返回对应的模板。
-- 存在的问题：
-  - 「浏览器的全局变量」，node上没有document，window。fetch，ajax才有的api。
-  - 需要用到CJS的模块化方式。
-  - Node没法解析css。通过ignore-loader忽略CSS的解析，或者通过css in js的形式。
 
-- 占位符：
+## 原理： 将模板最后渲染为一个`字符串`，最后访问路由时返回对应的模板。
+## 存在的问题：
+  - `浏览器的全局变量`，node上没有document，window。fetch，ajax才有的api，需要使用axios等替代。
+  - 需要用到CJS的模块化方式。
+  - Node没法解析css。通过`ignore-loader忽略CSS的解析`，或者通过`css in js`的形式。
+  - 对JS等文件不必使用hash的命名进行缓存，只返回一个html文件。
+## 解决方式：占位符
   - 在HTML添加占位符，将css通过读取文件，或者加载静态资源的方式加载。
-  - 首屏数据也同理。
+  - `首屏数据`也同理。
 
