--- a/打包器/webpack/基础篇.md
+++ b/打包器/webpack/基础篇.md
@@ -71,4 +71,5 @@ module.exports = {
   - `Compiler` 代表webpack从启动到关闭的生命周期。
 - chunkHash：和webpack打包的不同 `entry` 有关，「不同的entry」会生成不同的chunkHash值。（JS文件）
 - contentHash：根据文件内容变更。（css文件）
+  - 当解析顺序变化时，也会发生变化。
 
