add: js css vue2~3

--- a/css/盒子模型.md
+++ b/css/盒子模型.md
@@ -3,21 +3,21 @@
 ## 1. 基本概念
 
 - 标准盒模型：元素内容（content），内边距（padding），边框（border），margin（外边距）。
-- IE盒模型。区别：content计算不同。「content = content + padding + border
-」
+- IE盒模型。区别：content计算不同。`content = content + padding + border
+`
 
 ![](/image/微信图片_20210731220128.png)
 
 ## 2. CSS获取
 
-- css3新增的box-sizing进行获取，content-box & border-box(IE模型)
+- css3新增的`box-sizing`进行获取，`content-box` & `border-box`(IE模型)
 
 ## 3. JS获取模型的宽和高
 
-1. DOM.style.width只取到行内样式的宽和高。style&link的样式取不到。
-2. DOM.currentStyle.width/height取到最终渲染的宽和高，仅IE支持。
-3. window.getComputedStyle(DOM).width/height，同2，多浏览器支持，IE9👆。
-4. DOM.getBoundingClientRect().width/height，同2，IE9👆，还能取到相对于视窗上下左右的距离。
+1. `DOM.style.width`只取到行内样式的宽和高。`style&link`的样式取不到。
+2. `DOM.currentStyle.width / height` 取到最终渲染的宽和高，仅IE支持。
+3. `window.getComputedStyle(DOM).width / height`，同2，多浏览器支持，IE9👆。
+4. `DOM.getBoundingClientRect().width / height`，同2，IE9👆，还能取到相对于视窗上下左右的距离。
 
 ## 4. 外边距重叠
 
@@ -33,9 +33,9 @@
 
   1. Body根元素。
   2. 浮动元素。
-  3. 绝对定位，absolute，fixed
-  4. display: inline-block，table-cells，flex
-  5. overflow除了visible以外（hidden，auto，scroll）
+  3. 绝对定位，`absolute，fixed`
+  4. display: `inline-block，table-cells，flex`
+  5. `overflow` 除了`visible`以外 `hidden，auto，scroll`
 
 ## BFC特性：
 
