--- a/深入浅出vue/模板编译.md
+++ b/深入浅出vue/模板编译.md
@@ -1,7 +1,7 @@
 # 模板编译 - 生成渲染函数
 
 ##  模板编译在渲染过程的位置。
-- 模板 -> 模板编译 -> 渲染函数 -> VNode -> 用户界面
+- `template` -> 模板编译 -> 渲染函数 -> VNode -> 用户界面
 ## 生成渲染函数：
 - 将模板解析成AST。
 - 遍历AST标记静态节点。
