--- a/深入浅出vue/生命周期.md
+++ b/深入浅出vue/生命周期.md
@@ -74,17 +74,17 @@
 - normalizeEvent，将事件修饰符。
 
 ## 初始化inject
-- 所有子代注入依赖。
+- `所有子代注入依赖`。
 - inject的值可以被data，props之中用到，所以在data/props之前初始化。
 - 实现：
   - 获取用户配置的inject，保存到result中。
-  - 标识不转化为响应式。
+  - `标识不转化为响应式`。
   - resolveInject，为了获得注入的内容。inject配置的key从当前组件读取内容，读取不到则读取他的父组件。父组件的实例中有_provide属性。
   - 同时支持Symbol，用Reflect.ownKeys（不获取不可枚举的属性）读取inject所有的key，如果不支持symbol则用Object.key，同时必须filter不可枚举的属性。
   - 同时处理options为函数，默认值的情况，分别时执行还有当source = false时，赋默认值。
 - 如果inject是个数组？vue实例化时会将数据进行标准化，也就是会转化为Object的形式。
 
-## 初始化状态
+## 初始化状态 - initState
 - 初始化props,methods,data,computed,watch。
 - 初始化顺序：顺序决定了在data里可以使用props中的数据。
 ```JS
@@ -104,61 +104,61 @@ export function initState(vm) {
   }
 }
 ```
-  ## 1. 初始化props
-  - 父组件提供数据，通过props选择子组件需要哪些内容，通过子组件选项筛选出来后添加到子组件上下文中。
-  - PS：在渲染函数执行中，如果节点是组件节点，会在DOM渲染过程中，将「子组件实例化」，会将模板解析的标签属性解析出的数据当作参数传递给子组件。
-  - 实现：
-    1. 规格化props。名称驼峰化，数组规格化为对象。
-    2. 初始化props。规格化后的props从父组件传入的数据（或者new实例时传入的propsData），通过options筛选出需要的数据，保存在vm._props中。
-      - 同时，会有一个keys指向vm.$options._propsKeys，缓存props对象中的key，方便将来遍历更新时遍历。
-      - 非根节点的props，需转化为响应式。
-      - 需要处理boolean的情况。
-      ```html
-      <!-- 父组件是否有传这个属性，如果没有需要将value设置为false -->
-      <Component
-        :isVisible="false" />
-      ```
-    3. 在vm设置一个代理。通过vm.x访问到vm._props.x目的。
+## 1. 初始化props
+- 子组件选项从`父组件提供的数据`筛选出来，添加到子组件上下文中。
+- PS：在渲染函数执行中，如果节点是组件节点，会在DOM渲染过程中，将「子组件实例化」，会将模板解析的标签属性解析出的数据当作参数传递给子组件。
+- 实现：
+  1. 规格化props。名称驼峰化，数组规格化为对象。
+  2. 初始化props。规格化后的props从父组件传入的数据（或者new实例时传入的propsData），通过options筛选出需要的数据，保存在vm._props中。
+    - 同时，会有一个`keys指向vm.$options._propsKeys，缓存props对象中的key，方便将来遍历更新时遍历`。
+    - 非根节点的props，需`转化为响应式`。
+    - 需要处理boolean的情况。
+    ```html
+    <!-- 父组件是否有传这个属性，如果没有需要将value设置为false -->
+    <Component
+      :isVisible="false" />
+    ```
+  3. 在`vm设置一个代理`。通过vm.x访问到vm._props.x目的。
 
-  ## 2. 初始化methods
-  - 只需循环选项中的methods对象，将每个属性依次挂载到vm上的methods
-  - 实现：
-    1. 检验方法是否合法。是否有「$，_」开头。
-    2. 判断key是否存在，如果存在将方法通过bind改写this，在复制到vm[key]。
+## 2. 初始化methods
+- 只需循环选项中的methods对象，将每个属性依次挂载到vm上的methods
+- 实现：
+  1. 检验方法是否合法。是否有「$，_」开头。
+  2. 判断key是否存在，如果存在将方法通过bind改写this，在复制到vm[key]。
 
-  ## 3. 初始化data
-  - 设置到vm._data，并设置代理。
-  - 在将data转化为响应式数据。
-  - 实现：
-    1. option如果是函数需要执行函数，并将返回值赋值到data和vm._data。
-    2. 只有props中不存在key时，才会代理到实例。并不能以「$，_」开头。如果methods key有重复，仍然会代理到实例。
+## 3. 初始化data
+- 设置到vm._data，并设置代理。
+- 在将data转化为响应式数据。
+- 实现：
+  1. option如果是函数需要执行函数，并将返回值赋值到data和vm._data。
+  2. 只有props中不存在key时，才会代理到实例。并不能以「$，_」开头。如果methods key有重复，仍然会代理到实例。
 
-  ### PS proxy
-  ```JS
-  function proxy(target, sourceKey, key) {
-    sharedPropertyDefinition.get = function proxyGetter() {
-      return this[sourceKey][key]
-    }
-    sharedPropertyDefinition.set = function proxySetter() {
-      this[sourceKey][key] = val
-    }
-    Object.defineProperty(target, key, sharedPropertyDefinition)
+### PS proxy
+```JS
+function proxy(target, sourceKey, key) {
+  sharedPropertyDefinition.get = function proxyGetter() {
+    return this[sourceKey][key]
   }
-  ```
+  sharedPropertyDefinition.set = function proxySetter() {
+    this[sourceKey][key] = val
+  }
+  Object.defineProperty(target, key, sharedPropertyDefinition)
+}
+```
 
-  ## 4. 初始化computed
-  - 定义在vm上一个特殊的getter方法。「实现了缓存还有收集依赖的功能」
-  - 在数据变化了后，会将watcher的dirty属性设置为true，在下一次读取计算属性时，会向watcher发送通知，执行render函数时重新渲染。如果为false，说明数据没变，返回原来的值。不触发渲染。
-  - 实现：
-    1. 会在vm上新增_computedWatchers属性，用来保存所有计算属性的watcher实例。
-    2. 如果和props同名会报警告，如果和methods同名，会默默失效。
-    3. 重新渲染的变化：
-      - 在2.5.2版本前，计算属性函数中当有一个状态改变了，组件的watcher会得到变化，无论值变化与否都会得到通知，之后会执行重新渲染操作。
-      - 2.5.17之后，当值的状态变了后，计算属性的watcher会得到通知，计算一次计算属性的值，如果不同，在通知组件的watcher进行重新渲染。
+## 4. 初始化computed
+- 定义在`vm上一个特殊的getter方法`。「实现了缓存还有收集依赖的功能」
+- 在数据变化了后，会将watcher的dirty属性设置为true，在下一次读取计算属性时，会向watcher发送通知，执行render函数时重新渲染。如果为false，说明数据没变，返回原来的值。不触发渲染。
+- 实现：
+  1. 会在vm上新增_computedWatchers属性，用来保存所有计算属性的watcher实例。
+  2. 如果和props同名会报警告，如果和methods同名，会默默失效。
+  3. 重新渲染的变化：
+    - 在2.5.2版本前，计算属性函数中当有一个状态改变了，组件的watcher会得到变化，无论值变化与否都会得到通知，之后会执行重新渲染操作。
+    - 2.5.17之后，当值的状态变了后，计算属性的watcher会得到通知，计算一次计算属性的值，如果不同，在通知组件的watcher进行重新渲染。
 
-  ## 5. 初始化watch
-  - firefox上有一个Object.prototype.watch。如果不是，则循环watch选项，将对象每一项依次调用vm.$watch来观察值的变化。
-  - 如果是数组，需要对数组里的每一个元素都执行createWatcher来创建watcher。
+## 5. 初始化watch
+- firefox上有一个Object.prototype.watch。如果不是，则循环watch选项，将对象每一项`依次调用vm.$watch`来观察值的变化。
+- 如果是数组，需要对数组里的每一个元素都执行createWatcher来创建watcher。
 
-  ## 6. 初始化provide
-  - 添加到vm._provided。
+## 6. 初始化provide
+- 添加到vm._provided。
