feat: about some daily

--- a/css/盒子模型.md
+++ b/css/盒子模型.md
@@ -35,12 +35,12 @@
   2. 浮动元素。
   3. 绝对定位，`absolute，fixed`
   4. display: `inline-block，table-cells，flex`
-  5. `overflow` 除了`visible`以外 `hidden，auto，scroll`
+  5. `overflow` 除了`visible`以外 `hidden，auto，scroll` （推荐）
 
 ## BFC特性：
 
-- 同一个BFC下边距合并。
-- BFC可以包含浮动的元素。
+- 开启 BFC 的子元素和父元素外边距不会重叠
+- 开启 BFC 元素不会被浮动元素覆盖， 可以包含浮动元素；
 
 ![](/image/微信图片_20210731223511.png)
 - BFC可以阻止元素被浮动元素覆盖。
