--- a/node/性能.md
+++ b/node/性能.md
@@ -71,7 +71,7 @@
 
 # 架构优化
 
-## 动静分离
+## 动静分离 - 减少服务器压力
 
 ### 静态内容 - CDN分发
 - CDN 一般作为静态资源的服务器。会有一个源站，用户访问后，会分发到就近的一个网络节点去请求，网络节点在发请求到源站。
@@ -109,7 +109,7 @@ server {
  - nginx层缓存。
   ```NGINX
   location ~ /node/(\d*) {
-    // 缓存是缓存整个URL的
+    // 页面缓存的共享内存
     proxy_cache ...
   }
   ```
