--- a/性能优化/术语.md
+++ b/性能优化/术语.md
@@ -1,4 +1,5 @@
 # 术语
+![](/image/2885370f6a88cec513d05a3fc5626b2.png)
 
 ## FP（全称“First Paint”，翻译为“首次绘制”）
 - 是时间线上的第一个“时间点”，它代表浏览器第一次向屏幕传输像素的时间，也就是页面在屏幕上首次发生「视觉变化」的时间。
@@ -43,3 +44,4 @@
 
 ## 用户可操作时间节点：
 DOMready触发节点，点击事件有反应；
+
