--- a/性能优化/系统地优化页面性能.md
+++ b/性能优化/系统地优化页面性能.md
@@ -3,7 +3,7 @@
 # 加载阶段 - 发出请求到完整地页面渲染阶段。
 - 加载阶段渲染流水线
 ![](https://static001.geekbang.org/resource/image/5d/7b/5d8716586b5f4d719097dca881007a7b.jpg)
-- 可见，JS，HTML资源，CSS文件会阻塞首次渲染，称之为「关键资源」。而图片，视频，音频则不会。
+- 可见，JS，HTML资源，CSS文件解析会阻塞首次渲染，称之为「关键资源」。而图片，视频，音频则不会。
 
 ## 优化思路：
 - 关键资源个数。
@@ -23,6 +23,8 @@
 
 ## 优化思路
 - 减少重排，重绘。
+  - 图片设置宽高。`CLS`
+  - WEB 字体
 - 减少JS脚本霸占主线程太多时间。
   - 分为多个任务，执行时间不要太久。
   - service worker。多线程工作。
@@ -30,3 +32,6 @@
 - 避免在一次JS执行中，多次修改DOM。
 - 利用CSS合成动画。利用好will-change设置为单独一个图层。
 - 避免频繁的垃圾回收，不频繁创建临时变量。
+- 解析HTML和css
+  - 提取关键CSS
+  - 推迟非关键CSS
