--- a/算法/算法.md
+++ b/算法/算法.md
@@ -7,7 +7,8 @@
 - 数学归纳法, 当最简单的N成立,证明N + 1也成立,所以之后的结果也成立.
 
 # 回溯
-- 仍旧用递归的方法实现，反复重复之前步骤可能出现的两种情况：
+- 采用试错的思想，尝试分步解决问题，当不能得到有效的解答后，取消上一步或者上几步的计算。
+- 反复重复（递归）之前步骤可能出现的两种情况：
   - 找到一个可能存在的正确答案。
   - 尝试了所有方法，最后宣告没有答案。
 
@@ -104,3 +105,5 @@ x & (1 << (n - 1))// 3. 获取x第N位的幂值
   x & -x
 // 5. x & ~x => 0
 ```
+
+## 剪枝
