--- a/性能优化/系统地优化页面性能.md
+++ b/性能优化/系统地优化页面性能.md
@@ -35,3 +35,27 @@
 - 解析HTML和css
   - 提取关键CSS
   - 推迟非关键CSS
+
+## LCP
+- 阻塞渲染的JS和CSS：HTML 解析器遇到任何外部样式表（<link rel="stylesheet">）或同步 JavaScript 标签（<script src="main.js">），则会暂停解析。
+  - 减少CSS阻塞时间
+    - 压缩css`optimize-css-assets-webpack-plugin`
+    - 延迟加载非关键的css
+      - 代码覆盖率里查看css的使用情况
+      - 对于初始化不需要的CSS，`loadCSS`
+      ```html
+      <!-- preload + as="style"异步请求样式表 -->
+      <!-- onload加载后对其和html关系做处理 -->
+      <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+      <noscript><link rel="stylesheet" href="styles.css"></noscript>
+      <!-- 不执行JS的兜底 -->
+      ```
+    - 内联关键的css
+  - JS
+    - 压缩，减少js
+    - 延迟加载JS
+    - 减少未使用的polyfill
+- 想要优先加载的资源用`rel=preload`
+- 缓存
+- CDN
+- 压缩图片
