add: vite esm cjs

--- a/JS/模块化.md
+++ b/JS/模块化.md
@@ -30,7 +30,7 @@
 ```
 
 # CommonJS
-- 每个文件是一个模块。服务器端加载运行是「同步加载」。浏览器端需要编译打包。
+- 原理：对代码进行解析，整理出代码中的所有模块依赖关系，相关的模块代码都打包在一起，形成一个完整的JS文件。服务器端加载运行是「同步加载」。浏览器端需要编译打包。
 - 特点：
   1. 不会影响全局作用域；
   2. 缓存运行结果，第二次之后直接读取缓存结果，想要再次运行必须清除缓存。
@@ -43,11 +43,11 @@ exports.xxx = value // module.exports.xxx
 // 引入
 require(xxx) // 读入并执行一个JS文件，返回模块的的exports，如果没有则报错
 ```
-- 加载：输出的是值的拷贝，修改不会影响值。
+- 加载：模块和脚本导出的是同一个引用，外面也可以改变模块导出的内容。
 
 # AMD规范
-- 异步加载，允许指定回调函数。
-- 服务器端由于模块文件都是存在本地硬盘，访问快，浏览器环境需要通过浏览器主进程调度。一般采用异步形式。
+- 异步加载，依赖前置。
+- 加载完依赖后立即执行依赖模块，依赖加载成功后执行回调
 ```JS
 // 定义
 define(function() {
@@ -67,8 +67,7 @@ require(['module1', 'module2'], function(m1, m2){
 2. 不会影响全局环境。
 
 # CMD规范
-- 模块「异步加载」，使用到时才会加载。
-- 整合了commonJS和AMD规范的特点。
+- 模块异步，延迟执行，就近依赖，先加载所有依赖模块，运行时才执行require内容，按顺序执行。
 ```JS
 // 没有依赖的模块
 define(function(require, exports, module) {
@@ -95,7 +94,7 @@ define(function(require) {
 ```
 
 # ES6模块化
-- export导出，import导入。
+- ESM的对外接口只是一种静态定义，为编译时加载，遇到模块加载命令import，就会生成一个只读引用。等脚本真正执行时，再根据这个只读引用，到被加载的那个模块内取值。
 ```JS
 // 导出
 export const value = 1
@@ -106,11 +105,12 @@ import { value } from './module1.js'
 ```
 
 # ESM与commonJS的差异：
-## ESM：输出的是值的动态引用，不会执行模块，「只有在需要用到时才到模块里取值」。
-  - 不会缓存值
+## ESM：
+  - 值引用，会修改里面的值，只读
   - 模块里变量绑定所在的模块
   - 在代码静态解析阶段就会生成
 ## CJS：是在「加载时执行」。
+  - 值拷贝。
   - 可以缓存值，修改值
   - 输出的是模块的运行结果
 
