upgrade: js 对象，函数，执行

--- a/JS/函数.md
+++ b/JS/函数.md
@@ -1,9 +1,10 @@
 # 函数分类
-- es2018之后的函数分类
+
+## es2018 之后的函数分类
   - 普通函数
   - 箭头函数
-  - class中的函数
-  - 生成器函数 function *
+  - class 中的函数
+  - 生成器函数 `function *`
   - class 定义的类，实际也是函数
   ```JS
   class A {
