feat: js review

--- a/JS/模块化.md
+++ b/JS/模块化.md
@@ -1,16 +1,16 @@
 # 模块化
-- node诞生之后，出现了多种复杂场景，为了提高代码复用率。
+- node 诞生之后，出现了多种复杂场景，为了提高代码复用率。
 - 只有导出的变量才能被外部使用，不影响外部的作用域。
 
 # 演变过程
-## 1. 全局function。
+## 1. 全局function
 - 将不同功能封装成不同的全局函数。
 - 问题：命名污染，数据不安全，模块成员看不出直接关系。
 ## 2. namespace
 - 对象的简单封装，减少了全局变量，解决命名冲突。
 - 问题：数据不安全。
 ## 3. IIFE模式
-- 匿名函数自调用。将数据和方法封装到一个函数内部，通过window属性暴露出来。数据私有化，只能拿到暴露的方法。
+- 匿名函数自调用。将数据和方法封装到一个函数内部，通过 window 属性暴露出来。数据私有化，只能拿到暴露的方法。
 - 问题：如果依赖另一个模块。
 ```JS
 (function(window) {
@@ -19,8 +19,8 @@
   window.myModule = { foo, bar } //ES6写法
 })(window)
 ```
-## 4. IIFE增强：引入依赖
-- 主要模式。
+## 4. IIFE 增强 - 引入依赖
+- 主要模式
 ```JS
 (function(window, $) {
   // ...
@@ -30,20 +30,57 @@
 ```
 
 # CommonJS
-- 原理：对代码进行解析，整理出代码中的所有模块依赖关系，相关的模块代码都打包在一起，形成一个完整的JS文件。服务器端加载运行是「同步加载」。浏览器端需要编译打包。
-- 特点：
-  1. 不会影响全局作用域；
-  2. 缓存运行结果，第二次之后直接读取缓存结果，想要再次运行必须清除缓存。
-  3. 按代码中的顺序加载。
+对代码进行解析，整理出代码中的所有模块依赖关系，相关的模块代码都打包在一起， `形成一个完整的JS文件` 。服务器端加载运行是 `同步加载` 。浏览器端需要编译打包。
+
+## 特点
+- 当一个模块被脚本引用后，默认会得到一个空对象；
+```JS
+// 默认情况
+let lib = require('module') // lib = {}
+```
+- 模块内容可以通过 `exports.xx` 导出；
+```JS
+// 模块A
+exports.a = 'world'
+
+// 脚本
+let lib = require('module') // { a: 'world' }
+```
+- 不会影响全局作用域；
+- `缓存运行结果`，第二次之后直接读取缓存结果，想要再次运行必须清除缓存。
+- 按代码中的顺序加载。
 ```JS
 // 暴露模块
 module.exports = value
 exports.xxx = value // module.exports.xxx
 
 // 引入
-require(xxx) // 读入并执行一个JS文件，返回模块的的exports，如果没有则报错
+// 读入并执行一个JS文件，返回模块的的exports，如果没有则报错
+require(xxx)
 ```
-- 加载：模块和脚本导出的是同一个引用，外面也可以改变模块导出的内容。
+- 模块和脚本导出的是 `同一个引用` ，外面也可以改变模块导出的内容。
+```JS
+// 模块A
+exports.a = { name: 'Jess' }
+setTimeout(() => { console.log(a) }, 2000) // Jess666
+
+// 脚本
+let lib = require('module') // { a: 'world' }
+lib.a = 'Jess666'
+```
+- 在导出中也可以让 `module.exports` 覆盖掉之前定义的 `export` 对象;但模块A内部使用的 `exports` 还是 `export` 的相关内容，只是 「外部访问到的是 `module.exports` 的内容」。
+```JS
+// 模块A
+export.a = 'jess'
+module.exports = function aa() {}
+console.log(exports) // { a: jess }
+
+// 脚本
+let lib = require('module') // aa
+lib.a // 仍旧是module.exports
+```
+- ps: webpack 对于CJS的实现，`require`会替换掉`module`下面的`exports`引用。但内部还存留着 `exports`。
+![](/image/ed499f52f94469b646e543a3f9c64ef.png)
 
 # AMD规范
 - 异步加载，依赖前置。
@@ -94,7 +131,7 @@ define(function(require) {
 ```
 
 # ES6模块化
-- ESM的对外接口只是一种静态定义，为编译时加载，遇到模块加载命令import，就会生成一个只读引用。等脚本真正执行时，再根据这个只读引用，到被加载的那个模块内取值。
+- ESM的对外接口只是一种 `静态定义`，遇到模块加载命令 `import` ，就会生成一个 `只读引用` 。等脚本真正执行时，再根据这个只读引用，到被加载的那个模块内取值。
 ```JS
 // 导出
 export const value = 1
@@ -104,9 +141,33 @@ export default value
 import { value } from './module1.js'
 ```
 
+# UMD
+一种 Javascript 通用模块定义规范，让你的模块能在 Javascript 所有运行环境中发挥作用。例如：AMD和CommonJS（服务端模块化规范)的结合体。
+```JS
+(function(root, factory) {
+  if (typeof define === 'function' && define.amd) {
+    // AMD. Register as an anonymous module.
+    define(['b'], factory)
+  } else if (typeof module === 'object' && module.exports) {
+    // Node. Does not work with strict CommonJS, but
+    // only CommonJS-like environments that support module.exports,
+    // like Node.
+    module.exports = factory(require('b'))
+  } else {
+    // Browser globals (root is window)
+    root.returnExports = factory(root.b)
+  }
+})(this, function(b) {
+  // Just return a value to define the module export.
+  // This example returns an object, but the module
+  // can return a function as the exported value.
+  return {}
+})
+```
+
 # ESM与commonJS的差异：
 ## ESM：
-  - 值引用，会修改里面的值，只读
+  - 值引用，只读
   - 模块里变量绑定所在的模块
   - 在代码静态解析阶段就会生成
 ## CJS：是在「加载时执行」。
