--- a/JS/词法.md
+++ b/JS/词法.md
@@ -1,19 +1,20 @@
 # 词法
 ![](/image/653e58f7fcbc9d776f19b8d9737136c.png)
 
-- 文法是编译原理中对语言的写法的一种规定，一般来说，文法分成词法和语法两种。
+## 文法
+编译原理中对语言的写法的一种规定，一般来说，文法分成 `词法` 和 `语法` 两种。
 - 词法规定了语言的最小语义单元：token
 
 ## JS词法
-- WhiteSpace 空白字符
-- LineTerminator 换行符
-- Comment 注释
-- Token 词
-  - IdentifierName 标识符名称，典型案例是我们使用的变量名，注意这里`关键字`也包含在内了。
-  - Punctuator 符号，我们使用的运算符和大括号等符号。
-  - NumericLiteral 数字直接量，就是我们写的数字。
-  - StringLiteral 字符串直接量，就是我们用单引号或者双引号引起来的直接量。
-  - Template 字符串模板，用反引号` 括起来的直接量。
+- `WhiteSpace` 空白字符
+- `LineTerminator` 换行符
+- `Comment` 注释
+- `Token` 词
+  - `IdentifierName` 标识符名称，典型案例是我们使用的变量名，注意这里`关键字`也包含在内了。
+  - `Punctuator` 符号，我们使用的运算符和大括号等符号。
+  - `NumericLiteral` 数字直接量，就是我们写的数字。
+  - `StringLiteral` 字符串直接量，就是我们用单引号或者双引号引起来的直接量。
+  - `Template` 字符串模板，用反引号` 括起来的直接量。
 
 ## ps:
 - 首先是除法和正则表达式冲突问题。JavaScript 的解决方案是定义两组词法，然后判断选择词法。
