--- a/JS/语句.md
+++ b/JS/语句.md
@@ -12,27 +12,28 @@ console.log(foo()); // return 0 a
 ```
 ![](/image/05c511b221732410d03f8c672c29291.jpg)
 
-# Completion Record 类型 - 用于描述异常、跳出等语句执行过程
+# Completion Record 类型
+用于描述异常、跳出等语句执行过程
 
-- [[type]] 表示完成的类型，有 break continue return throw 和 normal 几种类型；
-- [[value]] 表示语句的返回值，如果语句没有，则是 empty；
-- [[target]] 表示语句的目标，通常是一个 JavaScript 标签（标签在后文会有介绍）。
+- `[[type]]` 表示完成的类型，有 break continue return throw 和 normal 几种类型；
+- `[[value]]` 表示语句的返回值，如果语句没有，则是 empty；
+- `[[target]]` 表示语句的目标，通常是一个 JavaScript 标签（标签在后文会有介绍）。
 
-- 正是依靠语句的 Completion Record 类型，方才可以在语句的复杂嵌套结构中，实现各种控制。
+- 正是依靠语句的 `Completion Record` 类型，方才可以在语句的复杂嵌套结构中，实现各种控制。
 
 ## 普通语句
-- 执行后，会得到 [[type]] 为 normal 的 Completion Record，JavaScript 引擎遇到这样的 Completion Record，会`继续执行`下一条语句。
-- 这些表达式中，表达式语句会产生 [[value]]，当然，从引擎控制的角度，这个 value 并没有什么用处。
+- 执行后，会得到 `[[type]]` 为 normal 的 `Completion Record`，JavaScript 引擎遇到这样的 `Completion Record`，会`继续执行`下一条语句。
+- 这些表达式中，表达式语句会产生 `[[value]]`，当然，从引擎控制的角度，这个 value 并没有什么用处。
   ![](/image/94e99502afbb85bf1517378f63a2d98.png)
-  - PS： Chrome 控制台显示的正是语句的 Completion Record 的 [[value]]。
+  - PS： Chrome 控制台显示的正是语句的 `Completion Record` 的 `[[value]]`。
 
 ## 语句块
-- 语句块内部的语句的 Completion Record 的 [[type]] 如果不为 normal，会打断语句块后续的语句执行。
+- 语句块内部的语句的 `Completion Record` 的 `[[type]]` 如果不为 normal，会打断语句块后续的语句执行。
 ```JS
 {
   var i = 1; // normal, empty, empty
   return i; // return, 1, empty
-  i ++; 
+  i ++;
   console.log(i)
 } // return, 1, empty
 
