--- a/JS/语法.md
+++ b/JS/语法.md
@@ -9,29 +9,28 @@
 ![](/image/78bbd8b0d50c94232bcb0c547551c20.png)
 
 ## PS： 不写分号需要注意的场景
-- 以括号开头的语句。```(function(){})();(function)```
-- 以数组开头的语句.```var a = []; [1,23,4]...```
-- 以正则表达式开头的语句.``` var a = 1; /a/g...  ```
+- 以括号开头的语句。`(function(){})();(function)`
+- 以数组开头的语句. `var a = []; [1,23,4]...`
+- 以正则表达式开头的语句. ` var a = 1; /a/g...  `
 
 # 脚本与模块
 ![](/image/3f46c80064a8b0019b1cb81b7fd21ef.jpg)
 ## 是什么：
-- 来源：脚本是可以由浏览器或者 node 环境引入执行的，而模块只能由 JavaScript 代码用 import 引入执行。
-- 概念：我们可以认为脚本具有主动性的 JavaScript 代码段，是控制宿主完成一定任务的代码；而模块是被动性的 JavaScript 代码段，是等待被调用的库。
-- 现代浏览器可以用 script 引入模块或者脚本，如果要引入模块，需要给script加上 `type=“module”`
+- 脚本是可以由浏览器或者 node 环境引入执行的，而模块只能由 JavaScript 代码用 `import` 引入执行。
+- 概念：脚本是具有主动性的 JavaScript 代码段，是控制宿主完成一定任务的代码；而模块是被动性的 JavaScript 代码段，是等待被调用的库。
+- 现代浏览器可以用 `<script>` 引入模块或者脚本，如果要引入模块，需要给script加上 `type=“module”`
 
 ## import声明
--  import 一个模块，只是保证了这个模块代码被执行，引用它的模块是无法获得它的任何信息的。不用from的情况下
+-  `import` 一个模块，只是保证了这个模块代码被执行，引用它的模块是无法获得它的任何信息的。不用 from 的情况下
 - 带 from 的 import 意思是引入模块中的一部分信息，可以把它们变成本地的变量。同时，「from，as的变量仍然受到原来模块的控制，仍然与原来的变量是同一个。」
 
 ## export声明
 - export 可以加在任何声明性质的语句之前。例如：var, function, class, let。。。
 - export default + 表达式。「这里导出的是值，不是引用」
 
-## JavaScript 引擎除了执行脚本和模块之外，还可以执行函数。而函数体跟脚本和模块有一定的相似之处
 ## 函数体
 
-- 执行函数的行为通常是在 JavaScript 代码执行时，注册宿主环境的某些事件触发的，而执行的过程，就是执行函数体
+- 执行函数的过程，就是执行函数体
 - 函数体其实也是一个语句的列表。跟脚本和模块比起来，函数体中的语句列表中`多了 return 语句可以用`。
 
 ## JS语法的全局机制
@@ -39,17 +38,16 @@
 - 预处理：预处理过程将会提前处理 var、函数声明、class、const 和 let 这些语句，以确定其中变量的意义。
   - 预处理声明，执行时赋值
   - var 除了脚本和函数体都会穿透，创建一个函数作用域。
-
   - function 声明
     - 在有if语句中，在预处理阶段，仍然会产生变量并作用域提升，但不再被提前赋值：
   - class 声明：
     - class 声明也是会被预处理的，它会在作用域中创建变量，并且要求访问它时抛出错误。
   - class 的声明作用不会穿透 if 等语句结构，所以只有写在全局环境才会有声明作用
 
-  - `按照现代语言设计的评价标准，及早抛错是好事`。class 设计比 function 和 var 更符合直觉，而且在遇到一些比较奇怪的用法时，倾向于抛出错误。
+  - 按照现代语言设计的评价标准，`及早抛错是好事`。class 设计比 function 和 var 更符合直觉，而且在遇到一些比较奇怪的用法时，倾向于抛出错误。
 
 - 指令序言机制：
-  - 最早是为了 use strict 设计的，它规定了一种给 JavaScript 代码添加元信息的方式。
+  - 最早是为了 `use strict` 设计的，它规定了一种给 JavaScript 代码添加元信息的方式。
 
 # JS语句
 - JavaScript 标准中，把语句分成了两种：声明和普通语句。
@@ -73,8 +71,8 @@
 
 - 循环语句
   - for
-  - for in 循环。for in 循环枚举对象的属性，这里体现了属性的 enumerable 特征。
-  - for of 循环。背后的机制是 iterator 机制。
+  - `for...in` 循环。for in 循环枚举对象的属性，这里体现了属性的 `enumerable` 特征。
+  - `for...of` 循环。背后的机制是 `iterator` 机制。
     ```JS
       let o = {
         [Symbol.iterator]:() => ({
@@ -96,7 +94,7 @@
     ```
     - 一般用 generator function 定义iterator。
 
-- return 
+- return
   - 终止函数的执行，并且指定函数的返回值
 
 - break 语句和 continue 语句。属于控制型语句
@@ -108,23 +106,23 @@ with(o){
     console.log(a, b);
 }
 ```
-- try 语句和 throw 语句
+- `try` 语句和 `throw` 语句
 - debugger，调试器在此断点。
 
 ## 声明型语句
-- var ，
-- let，const，有暂时性死区，所以还是存在预处理机制，执行到 const 语句前，我们的 JavaScript 引擎就已经知道后面的代码将会声明变量 a，从而不允许我们访问外层作用域中的 a。
+- var
+- let，const，有暂时性死区，所以`还是存在预处理机制`，执行到 const 语句前，我们的 JavaScript 引擎就已经知道后面的代码将会声明变量 a，从而不允许我们访问外层作用域中的 a。
 - class。
 - 函数声明。
-  - 带 * 的函数：generator。生成器函数可以理解为返回一个序列的函数，它的底层是 iterator 机制。
+  - 带 * 的函数：`generator`。生成器函数可以理解为返回一个序列的函数，它的底层是 `iterator` 机制。
 
 # 表达式语句
 - 语句部分，其实最终产生执行效果的语句不多。真正能干活的就只有表达式语句，其它语句的作用都是产生各种结构，来控制表达式语句执行，或者改变表达式语句的意义。
 
-- 定义：实际上就是一个表达式，由运算符链接变量或者直接量（右边）构成。
+- 定义：实际上就是一个表达式，由 `运算符链接变量` 或者 `直接量（右边）` 构成。
 
 ## 分类：
-- PrimaryExpression 主要表达式：
+- `PrimaryExpression` 主要表达式：
   - 它是表达式的最小单位，它所涉及的语法结构也是优先级最高的。
   - 其中包含了各种直接量，直接量就是直接用某种语法写出来的具有特定类型的值。例如：123，hello world。
   - 除此之外，JavaScript 还能够直接量的形式定义对象，针对函数、类、数组、正则表达式等特殊对象类型。
@@ -135,9 +133,9 @@ with(o){
   [];
   /abc/g;
   ```
-  - 任何表达式加上圆括号，都被认为是 Primary Expression。例如：（a + b）
+  - 任何表达式加上圆括号，都被认为是 `Primary Expression` 。例如：（a + b）
 
-- MemberExpression 成员表达式
+- `MemberExpression` 成员表达式
   - 通常是用于访问对象成员的。
     ```JS
     a.b;
@@ -145,29 +143,29 @@ with(o){
     new.target; // 用于判断函数是否被new调用
     super.b;
     ```
-  - 以下也算是Member expression
+  - 以下也算是 `Member expression`
     ```js
     f`a${b}c`; // 表示把模板各个部分算好后传递给一个函数
 
     new Cls(); // 带参数列表的 new 运算，注意，不带参数列表的 new 运算优先级更低，不属于 Member Expression。
     ```
-- NewExpression NEW 表达式
+- `NewExpression` NEW 表达式
   - Member Expression 加上 new 就是 New Expression
 
-- CallExpression 函数调用表达式
+- `CallExpression` 函数调用表达式
   - Member Expression 还能构成 Call Expression。它的基本形式是 Member Expression 后加一个括号里的参数列表
   - 或者我们可以用上 super 关键字代替 Member Expression。
   - 我们可以理解为，Member Expression 中的某一子结构具有函数调用，那么整个表达式就成为了一个 Call Expression。
 
-- LeftHandSideExpression 左值表达式
+- `LeftHandSideExpression` 左值表达式
   - New Expression 和 Call Expression 统称 LeftHandSideExpression，左值表达式。
   - 最经典的用法是用于构成赋值表达式， 凡是需要“可以被修改的变量”的位置，都能见到它的身影。
 
-- AssignmentExpression 赋值表达式
+- `AssignmentExpression` 赋值表达式
   - a = b
   - a = b = c = d
   - a += b;
-- Expression 表达式
+- `Expression` 表达式
   - 在 JavaScript 中，表达式就是用逗号运算符连接的赋值表达式，我们可以把逗号可以理解为一种小型的分号。
   - a = b, b = 1, null;
 
@@ -177,9 +175,9 @@ with(o){
 - JavaScript 标准也规定了左值表达式同时都是条件表达式（也就是右值表达式），此外，左值表达式也可以通过跟一定的运算符组合，逐级构成更复杂的结构，直到成为右值表达式。
 
 ## 分类
-- 更新表达式 UpdateExpression。包括：前后自增自减++，--
-- 一元运算表达式 UnaryExpression
-- 乘方表达式 ExponentiationExpression
+- 更新表达式 `UpdateExpression` 。包括：前后自增自减++，--
+- 一元运算表达式 `UnaryExpression`
+- 乘方表达式 `ExponentiationExpression`
   - ** 运算是右结合的，这跟其它正常的运算符（也就是左结合运算符）都不一样。
   - -2 这样的一元运算表达式，是不可以放入乘方表达式的，如果需要表达类似的逻辑，必须加括号。
   ```JS
@@ -187,15 +185,15 @@ with(o){
   2 ** 30 // 正确
   -2 ** 30 // 报错
   ```
-- 乘法表达式 MultiplicativeExpression
+- 乘法表达式 `MultiplicativeExpression`
   ```JS
   // 乘、除和取余
   *
   /
   %
   ```
-- 加法表达式 AdditiveExpression： + -
-- 移位表达式 ShiftExpression
+- 加法表达式 `AdditiveExpression：` + -
+- 移位表达式 `ShiftExpression`
   ```js
   // 左移 n 位相当于乘以 2 的 n 次方，右移 n 位相当于除以 2 取整 n 次。
   << 向左移位
@@ -203,33 +201,33 @@ with(o){
   >>> 无符号向右移位
   ```
   - 在 JavaScript 中，二进制操作整数并不能提高性能，移位运算这里也仅仅作为一种数学运算存在，这些运算存在的意义也仅仅是照顾 C 系语言用户的习惯了。
-- 关系表达式 RelationalExpression
+- 关系表达式 `RelationalExpression`
   - 大于、小于、大于等于、小于等于等运算符号连接，统称为关系运算。
-- 相等表达式 EqualityExpression：==,!=,===,!==
+- 相等表达式 `EqualityExpression` ：==,!=,===,!==
   -  JavaScript 中著名的设计失误，那就是 == 的行为。== 规则：
-    - undefined 与 null 相等；
-    - 字符串和 bool 都转为数字再比较；
-    - 对象转换成 primitive 类型再比较。
+    - `undefined` 与 `null` 相等；
+    - 字符串和 `bool` 都转为数字再比较；
+    - 对象转换成 `primitive` 类型再比较。
 
     - PS：不太符合常理的规则
       - 一个是即使字符串与 boolean 比较，也都要转换成数字；
-      - 二是对象如果转换成了 primitive 类型跟等号另一边类型恰好相同，则不需要转换成数字。
+      - 二是对象如果转换成了 `primitive` 类型跟等号另一边类型恰好相同，则不需要转换成数字。
 - 位运算表达式
-  - 按位与表达式 BitwiseANDExpression，&，把操作数视为二进制整数，然后把两个操作数按位做与运算。
-  - 按位异或表达式 BitwiseANDExpression，^，把操作数视为二进制整数，把两个操作数按位做异或运算。异或两位相同时得 0，两位不同时得 1
+  - 按位与表达式 `BitwiseANDExpression` ，&，把操作数视为二进制整数，然后把两个操作数按位做与运算。
+  - 按位异或表达式 `BitwiseANDExpression` ，^，把操作数视为二进制整数，把两个操作数按位做异或运算。异或两位相同时得 0，两位不同时得 1
     - 小技巧：两次异或运算相当于取消。可用于交换值
     ```JS
     let a = 102, b = 324;
-    
+
     a = a ^ b;
     b = a ^ b;
     a = a ^ b;
-    
+
     console.log(a, b);
     ```
-  - 按位或表达式 BitwiseORExpression。|
+  - 按位或表达式 `BitwiseORExpression`。|
 - 逻辑与表达式和逻辑或表达式：|| &&
-- 条件表达式 ConditionalExpression。condition ? branch1 : branch2
+- 条件表达式 `ConditionalExpression`。condition ? branch1 : branch2
 
 
 
