refactor: vue2 learn blog

--- a/深入浅出vue/指令.md
+++ b/深入浅出vue/指令.md
@@ -1,17 +1,19 @@
 # 指令
 - 当表达式的值改变时，将其尝试的连带影响响应式的作用到DOM上。
-- 实现：在模板编译阶段，将指令解析到AST，然后用AST生产代码字符串的过程，实现了某些内置指令的功能，最后在虚拟DOM的「渲染」时，触发自定义指令的钩子函数。
+- 实现：在模板编译阶段，将指令解析到 `AST` ，然后用 AST 生产代码字符串的过程，实现了某些内置指令的功能，最后在 `VNode` 的 `渲染` 时，触发自定义指令的钩子函数。
 
 ## v-if 三元表达式
 
 ## v-on
-- 分别设置了create，update钩子函数。在DOM被创建和更新时触发。
-- 同时，根据新旧的VNode决定注册或者解绑事件。
-- 最后被绑定的事件监听器其实是：handler._withTask。
+
+- 分别设置了 `create，update` 钩子函数。在 DOM 被创建和更新时触发。
+- 同时，根据新旧的 `VNode` 决定注册或者解绑事件。
+- 最后被绑定的事件监听器其实是：`handler._withTask`。
 
 ## 自定义指令内部原理
-- 在模板解析时，vnode会有指令的相关信息。
+
+- 在模板解析时， `vnode` 会有指令的相关信息。
 - 在设置指令时，会对比新旧指令，并触发对应的钩子函数。
-  - 如果不存在执行bind钩子。同时添加inserted到insert列表中，在bind执行完在执行insert。
-  - 如果存在，则触发update。
-  - 最后在执行insert列表中的钩子。（该DOM节点被插入到父节点时触发insert钩子）。
+  - 如果不存在执行 `bind` 钩子。同时添加 `inserted` 到 `insert` 列表中，在 `bind` 执行完在执行 `insert` 。
+  - 如果存在，则触发 `update` 。
+  - 最后在执行 `insert` 列表中的钩子。（该 DOM 节点被插入到父节点时触发 insert 钩子）。
